--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <title>The Gallery of Horns</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="test/css" href="css/reset.css" />
+    <link rel="stylesheet" type="test/css" href="css/base.css" />
+    <link rel="stylesheet" type="test/css" href="css/layouts.css" />
+    <link rel="stylesheet" type="test/css" href="css/modules.css" />
+
   </head>
   <body>
     <header>
@@ -21,5 +28,10 @@
     <footer>
       &copy; 2019 Code Fellows
     </footer>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
