--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <h1>The Gallery of Horns</h1>
-      <select>
+      <select id= "dropdown-template">
         <option value="default">Filter by Keyword</option>
       </select>
     </header>
