--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Gallery of Horns</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <title>The Gallery of Horns</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="css/layouts.css" />
+  <link rel="stylesheet" type="text/css" href="css/modules.css" />
 
-    <link rel="stylesheet" type="test/css" href="css/reset.css" />
-    <link rel="stylesheet" type="test/css" href="css/base.css" />
-    <link rel="stylesheet" type="test/css" href="css/layouts.css" />
-    <link rel="stylesheet" type="test/css" href="css/modules.css" />
+</head>
 
-  </head>
-  <body>
-    <header>
-      <h1>The Gallery of Horns</h1>
-      <select id= "dropdown-template">
-        <option value="default">Filter by Keyword</option>
-      </select>
-    </header>
-    <main>
-      <section id="photo-template">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-      </section>
-    </main>
-    <footer>
-      &copy; 2019 Code Fellows
-    </footer>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+<body>
+  <header>
+    <h1>The Gallery of Horns</h1>
+    <select id="dropdown-template">
+      <option value="default">Filter by Keyword</option>
+    </select>
+  </header>
+  <main>
+    <section id="photo-template">
+      <h2></h2>
+      <img src="" alt="">
+      <p></p>
+    </section>
+  </main>
+  <footer>
+    &copy; 2019 Code Fellows
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
