--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" type="test/css" href="css/reset.css" />
-  <link rel="stylesheet" type="test/css" href="css/base.css" />
-  <link rel="stylesheet" type="test/css" href="css/layouts.css" />
-  <link rel="stylesheet" type="test/css" href="css/modules.css" />
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="css/layouts.css" />
+  <link rel="stylesheet" type="text/css" href="css/modules.css" />
 </head>
 
 <body>
   <header>
     <h1>The Gallery of Horns</h1>
+    <div id="radio-buttons">
+      <input id="radio-one" type="radio" name="filter" value="radio-one">
+      <label>Search by Keyword</label>
+      <input id="radio-two" type="radio" name="filter" value="radio-two">
+      <label>Search by Number of Horns</label>
+    </div>
     <select id="dropdown-template">
       <option value="default">Filter by Keyword</option>
     </select>
@@ -22,7 +28,7 @@
   <main>
     <section id="photo-template">
       <h2></h2>
-      <img src="" alt="">
+      <img src="" alt="" data-keyword="" data-horns="">
       <p></p>
     </section>
   </main>
