--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="test/css" href="css/reset.css" />
-    <link rel="stylesheet" type="test/css" href="css/base.css" />
-    <link rel="stylesheet" type="test/css" href="css/layouts.css" />
-    <link rel="stylesheet" type="test/css" href="css/modules.css" />
+    <link rel="stylesheet"href="css/reset.css" />
+    <link rel="stylesheet"  href="css/base.css" />
+    <link rel="stylesheet" href="css/layouts.css" />
+    <link rel="stylesheet"  href="css/modules.css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Zetta&display=swap" rel="stylesheet">
 
   </head>
   <body>
