page 1 and 2 rendering with button clicks

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <select id="dropdown-template">
       <option value="default">Filter by Keyword</option>
     </select>
+    <nav>
+      <button id="page-one">Page One</button>
+      <button id="page-two">Page Two</button>
+    </nav>
   </header>
   <main>
     <section id="photo-template">
