--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Gallery of Horns</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <title>The Gallery of Horns</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="css/layouts.css" />
+  <link rel="stylesheet" type="text/css" href="css/modules.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Zetta&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:200&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet"href="css/reset.css" />
-    <link rel="stylesheet"  href="css/base.css" />
-    <link rel="stylesheet" href="css/layouts.css" />
-    <link rel="stylesheet"  href="css/modules.css" />
+  <script id="horn-template" type="text/x-handlebars-template">
+    <section id="{{keyword}}">
+      <h2>{{title}}</h2>
+      <img src="{{image_url}}" alt="" data-keyword="{{keyword}}" data-horns="{{horns}}">
+      <p>{{description}}</p>
+    </section>
+    </script>
 
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Zetta&display=swap" rel="stylesheet">
+</head>
 
-  </head>
-  <body>
-    <header>
-      <h1>The Gallery of Horns</h1>
-      <select id= "dropdown-template">
-        <option value="default">Filter by Keyword</option>
-      </select>
-    </header>
-    <main>
-      <section id="photo-template">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-      </section>
-    </main>
-    <footer>
-      &copy; 2019 Code Fellows
-    </footer>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+<body>
+  <header>
+    <h1>The Gallery of Horns</h1>
+    <div id="radio-buttons">
+      <input id="radio-one" type="radio" name="filter" value="radio-one">
+      <label>Search by Keyword</label>
+      <input id="radio-two" type="radio" name="filter" value="radio-two">
+      <label>Search by Number of Horns</label>
+    </div>
+    <select id="dropdown-template">
+      <option value="default">Filter by Keyword</option>
+    </select>
+    <nav>
+      <button id="page-one">Page One</button>
+      <button id="page-two">Page Two</button>
+    </nav>
+  </header>
+  <main>
+    
+  </main>
+  <footer>
+    &copy; 2019 Code Fellows
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
