tryingt to make progress on sorting method

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <option value="default">Filter by Keyword</option>
     </select>
     <div id="sorting">
-      <span>Title</span><span id="horns">Number of Horns</span>
+      <h3></h3>Sort By:</h3>
+      <button>Title</button>
+      <button id="horns">Number of Horns</button>
     </div>
     <nav>
       <button id="page-one">Page One</button>
