have most of sort method working to sort by title and horns, but getting an error

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
     </select>
     <div id="sorting">
       <h3></h3>Sort By:</h3>
-      <button>Title</button>
-      <button id="horns">Number of Horns</button>
+      <select id="sort-template">
+        <option value="default-value">Sort By</option>
+        <option value="title">Title</option>
+        <option value="horns">Number of Horns</option>
+      </select>
     </div>
     <nav>
       <button id="page-one">Page One</button>
