Sorting is working for both pages

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
       <option value="default">Filter by Keyword</option>
     </select>
     <div id="sorting">
-      <h3></h3>Sort By:</h3>
-      <button>Title</button>
-      <button id="horns">Number of Horns</button>
+      <select id="sort-template">
+        <option value="sort">Sort By</option>
+        <option value="title">Title</option>
+        <option value="numberofhorns">Number of Horns</option>
+      </select>
     </div>
     <nav>
       <button id="page-one">Page One</button>
       <button id="page-two">Page Two</button>
     </nav>
   </header>
-  <main>]
+  <main>
   </main>
   <footer>
     &copy; 2019 Code Fellows
