--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
       <option value="default">Filter by Keyword</option>
     </select>
     <div id="sorting">
-      <h3></h3>Sort By:</h3>
       <select id="sort-template">
-        <option value="default-value">Sort By</option>
+        <option value="sort">Sort By</option>
         <option value="title">Title</option>
-        <option value="horns">Number of Horns</option>
+        <option value="numberofhorns">Number of Horns</option>
       </select>
     </div>
     <nav>
